syntax = "proto3";
option java_package = "grpc";
message AccountByUserEmailRequest{
  string request = 1;
}
message AccountByUserEmailResponse{
  string response = 1;
  int32 status = 2;
}
message ChangeSumRequest{
  string request = 1;
}
message ChangeSumResponse{
  string response = 1;
  int32 status = 2;
}
message ChangeEnableRequest{
  string request = 1;
}
message ChangeEnableResponse{
  string response = 1;
  int32 status = 2;
}
message CreateAccountRequest{
  string request = 1;
}
message CreateAccountResponse{
  string response = 1;
  int32 status = 2;
}
message ChangeSumInSessionRequest{
  string request = 1;
}
message ChandeSumInSessionResponse{
  string response = 1;
  int32 status = 2;
}
message OpenSessionRequest{
  string request = 1;
}
message OpenSessionResponse{
  string response = 1;
  int32 status = 2;
}
message CloseSessionRequest{
  string request = 1;
}
message CloseSessionResponse{
  string response = 1;
  int32 status = 2;
}
service AccountService{
  rpc getAccountByEmail(AccountByUserEmailRequest) returns(AccountByUserEmailResponse);
  rpc changeSum(ChangeSumRequest) returns(ChangeSumResponse);
  rpc changeEnable(ChangeEnableRequest) returns(ChangeEnableResponse);
  rpc createAccount(CreateAccountRequest) returns(CreateAccountResponse);
  rpc changeSumInSession(ChangeSumInSessionRequest) returns(ChandeSumInSessionResponse);
  rpc openSession(OpenSessionRequest) returns(OpenSessionResponse);
  rpc closeSession(CloseSessionRequest) returns(CloseSessionResponse);
}